--- a/projekt/backend/auth-svc/package.json
+++ b/projekt/backend/auth-svc/package.json
@@ -10,12 +10,13 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=development nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "npm run proto:all && cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "proto:install": "npm i file:../proto",
-    "proto:auth": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto/models --ts_proto_out=./src/auth/ node_modules/proto/models/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb"
+    "proto:auth": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto/models --ts_proto_out=./src/auth/ node_modules/proto/models/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
+    "proto:all": "npm run proto:auth"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
