--- a/projekt/backend/api-gateway/package.json
+++ b/projekt/backend/api-gateway/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-gateway",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -12,9 +12,9 @@
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "npm run proto:all && cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "proto:install": "npm i file:../proto",
+    "proto:install": "cp -R ../proto .",
     "proto:auth": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto/models --ts_proto_out=./src/auth/ node_modules/proto/models/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:movies": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto/models --ts_proto_out=./src/movies/ node_modules/proto/models/movie.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:all": "npm run proto:auth && npm run proto:movies"
@@ -23,6 +23,7 @@
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.6.13",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.6",
     "@nestjs/platform-express": "^8.0.0",
