--- a/projekt/frontend/package.json
+++ b/projekt/frontend/package.json
@@ -19,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write *",
-    "prepare": "husky install"
+    "prettier": "prettier --write *"
   },
   "dependencies": {
     "@mui/material": "^5.8.0",
